force-app/main/default/objects/EDF_Action_Center__mdt/EDF_Action_Center__mdt.object-meta.xml
<CustomObject>
    <label>EDF Action Center</label>
    <pluralLabel>EDF Action Center</pluralLabel>
</CustomObject>