force-app/main/default/objects/EDF_Action_Center__mdt/fields/Button_Text__c.field-meta.xml
<CustomField>
    <fullName>Button_Text__c</fullName>
    <label>Button Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>