force-app/main/default/objects/EDF_Action_Center__mdt/fields/FellowshipApplyingFor__c.field-meta.xml
<CustomField>
    <fullName>FellowshipApplyingFor__c</fullName>
    <label>FellowshipApplyingFor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>U.S. Fellowship</fullName>
                <default>true</default>
                <label>U.S. Fellowship</label>
            </value>
            <value>
                <fullName>India Fellowship</fullName>
            </value>
            <value>
                <fullName>China Fellowship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>