force-app/main/default/objects/EDF_Action_Center__mdt/fields/Stages__c.field-meta.xml
<CustomField>
    <fullName>Stages__c</fullName>
    <label>Stages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>