force-app/main/default/objects/EDF_Action_Center__mdt/listViews/India_Action_Center.listView-meta.xml
<ListView>
    <fullName>India_Action_Center</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FellowshipApplyingFor__c</field>
        <operation>equals</operation>
        <value>India Fellowship</value>
    </filters>
    <label>India Action Center</label>
    <language>en_US</language>
</ListView>